[metadata]
name = rosnet
version = 0.1.0

[options]
packages = rosnet
python_requires = >=3.8
setup_requires =
	setuptools >= 38.3.0
install_requires =
	numpy >= 1.20
	autoray
	multimethod
tests_require =
	pytest
	pytest-cov >= 3.0
	tox

[options.extras_require]
distributed =
	pycompss >= 2.9
benchmark =
	opt_einsum
	quimb
	kahypar
	cotengra @ git+https://github.com/jcmgray/cotengra