[metadata]
name = rosnet
version = 0.3.0

[options]
packages = find:
python_requires = >=3.8
setup_requires =
	setuptools >= 38.3.0
install_requires =
	numpy >= 1.20
	autoray
	multimethod
	opt_einsum
tests_require =
	pytest
	pytest-cov >= 3.0
	tox
scripts =
	bin/rosnet-launch

[options.extras_require]
docs =
	sphinx
	sphinx-book-theme
	myst-parser[linkify]
distributed =
	pycompss >= 2.9
	dill
benchmark =
	opt_einsum
	quimb
	kahypar
	cotengra @ git+https://github.com/jcmgray/cotengra